crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__31_refinement_mismatch.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T215"]>
