crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__35_refinement_equivalent_op.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "value",
                    op: Gt,
                    rhs: Literal(
                        -1,
                    ),
                    span: Span {
                        start: 1232,
                        end: 1248,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    100,
                ),
                site: Span {
                    start: 1361,
                    end: 1382,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T210",
                    ),
                    severity: Error,
                    message: "record construction violates refinement: field `value` supplied with literal `100`, but predicate `value > -1` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1361,
                            end: 1382,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T210",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget while discharging refinement on field `value` against literal `100`; treat as a budget-exceeded variant of T210 (no counterexample available)",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1361,
                            end: 1382,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
            SubsumptionAtConstruction {
                actual: [
                    RefinementClause {
                        field: "value",
                        op: Gt,
                        rhs: Literal(
                            -1,
                        ),
                        span: Span {
                            start: 1232,
                            end: 1248,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    },
                ],
                expected: RefinementClause {
                    field: "copy",
                    op: Ge,
                    rhs: Literal(
                        0,
                    ),
                    span: Span {
                        start: 1278,
                        end: 1293,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                site: Span {
                    start: 1408,
                    end: 1432,
                    source: SourceId(
                        4294967295,
                    ),
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
