crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__38_refinement_length_of_non_array.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T217"]>
