crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__39_refinement_geq_boundary_pass.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "x",
                    op: Ge,
                    rhs: Literal(
                        0,
                    ),
                    span: Span {
                        start: 737,
                        end: 749,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    0,
                ),
                site: Span {
                    start: 834,
                    end: 856,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T224",
                    ),
                    severity: Error,
                    message: "function `accept_non_negative` call-site violates parameter refinement: argument #1 (param `x`) supplied with literal `0`, but predicate `x >= 0` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 834,
                            end: 856,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T224",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget discharging function `accept_non_negative` call-site refinement on argument #1 (param `x`) against literal `0`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 834,
                            end: 856,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
