crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__41_refinement_large_literal_pass.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "x",
                    op: Gt,
                    rhs: Literal(
                        1000000,
                    ),
                    span: Span {
                        start: 696,
                        end: 713,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    999999999,
                ),
                site: Span {
                    start: 798,
                    end: 819,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T224",
                    ),
                    severity: Error,
                    message: "function `need_large` call-site violates parameter refinement: argument #1 (param `x`) supplied with literal `999999999`, but predicate `x > 1000000` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 798,
                            end: 819,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T224",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget discharging function `need_large` call-site refinement on argument #1 (param `x`) against literal `999999999`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 798,
                            end: 819,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
